--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,8 +2,7 @@ name: Add QA Validation Comment
 
 on:
   pull_request:
-    types:
-      - labeled
+    types: [opened, synchronize, reopened, labeled, unlabeled]
 
 jobs:
   add-comment:
@@ -15,9 +14,9 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          github.issues.createComment({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-            body: 'Esta PR debe ser validada por QA.'
-          })
+          github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Esta PR está lista para ser validada por QA. 🔍' 
+            })
