[master]: ✨ init sample PR

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,14 +11,7 @@ jobs:
 
     steps:
     - name: Add comment to PR
-      uses: actions/github-script@v6
+      uses: mshick/add-pr-comment@v2
       with:
-        script: |
-          github.rest.pulls.createReviewComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.repo.pull_number,
-              commit_id: context.repo.commit_id,
-              path: context.repo.path,
-              body: 'Esta PR está lista para ser validada por QA. 🔍' 
-            })
+        message-path: | 
+          messages/message-cr-ok.md'
