[master]: ✨ init sample PR

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,5 +13,7 @@ jobs:
     - name: Add comment to PR
       uses: mshick/add-pr-comment@v2
       with:
-        message-path: | 
-          message-cr-ok.md
+        message: |
+            **Howdie!**
+        message-failure: |
+            Uh oh!
