--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,6 +14,7 @@ jobs:
       uses: mshick/add-pr-comment@v2
       with:
         message-path: .github/workflows/messages/message-cr-ok.md
+        allow-repeats: true
         # message: |
         #     **Howdie!**
         # message-failure: |
