--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,11 +13,17 @@ jobs:
     - name: Add comment to PR
       uses: mshick/add-pr-comment@v2
       with:
-        message-path: |
-             message-cr-ok.txt
-        allow-repeats: true
-        # message: |
-        #     **Howdie!**
+        # message-path: |
+        #      message-cr-ok.txt
+        # allow-repeats: true
+        message: |
+            ## [Preview link](https://antares-blog-staging-pr-${{ github.event.number }}.azurewebsites.net)
+
+            - ✅ Your changes have been deployed to the preview site. The preview site will update as you add more commits to this branch.
+            - The preview site shows any future-dated articles. Don't worry, if you are publishing a future-dated article, it will not show on the production site until the file's specified date.
+            - The preview link is shareable, but will be deleted when the pull request is merged or closed.
+
+            > *This is an automated message.*
         # message-failure: |
         #     Uh oh!
         # repo-token: ${{ secrets.GITHUB_TOKEN }}
