--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -14,17 +14,22 @@ permissions:
 
 jobs:
   build:
-    name: Build
+    name: Build & deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Setup pnpm 🧰
-        uses: pnpm/action-setup@v2.2.4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
           version: 9
-    
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+          cache: "pnpm"
      
       - name: Install and Build 🔧
         working-directory: apps/blog
