[master]: ⚒️ add gh-pages deploy

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
             pnpm install
+            pnpm --filter common run build
             pnpm --filter blog run build
 
       - name: Deploy 🚀
