--- a/.github/workflows/approve-to-int.yml
+++ b/.github/workflows/approve-to-int.yml
@@ -11,9 +11,13 @@ env:
   BASE_BRANCH:
 
 jobs:
+  debug:
+    name: Debug
+    runs-on: ubuntu-latest
+    steps:
+      - name: Variables
+        run: echo "$GITHUB_EVENT"
   merge:
-    - name: Debug
-      run: echo "$GITHUB_EVENT"
     name: Merge into stage
     if: github.event.review.state == 'approved' && contains(github.event.pull_request.labels.*.name, 'QA' )
     runs-on: ubuntu-latest
