--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -6,6 +6,11 @@ on:
 
   workflow_dispatch:
 
+
+concurrency:
+  group: auto-deploy-stage
+  cancel-in-progress: true
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
