✨PR3 tests auto merge in stage

--- a/.github/workflows/pr-approved.yml
+++ b/.github/workflows/pr-approved.yml
@@ -3,6 +3,7 @@ name: Notificar Aprobación de PR
 on:
   pull_request_review:
     types: [submitted]
+  workflow_dispatch:
 
 jobs:
   notificar_aprobacion:
