✨PR3 tests auto merge in stage

--- a/.github/workflows/pr-commands.yml
+++ b/.github/workflows/pr-commands.yml
@@ -12,16 +12,23 @@ jobs:
 
         steps:
             - name: Approve PR
-              uses: actions/github-script@v3
+              uses: octokit/request-action@v2.x
               with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-                  script: |
-                      github.pulls.createReview({
-                          owner: context.repo.owner,
-                          repo: context.repo.repo,
-                          pull_number: context.payload.issue.number,
-                          event: 'APPROVE'
-                      })
+                route: POST /repos/:repository/pulls/:pull_number/reviews
+                repository: ${{ github.repository }}
+                pull_number: ${{ github.event.issue.number }}
+                event: "APPROVE"
+            # - name: Approve PR
+            #   uses: actions/github-script@v3
+            #   with:
+            #       github-token: ${{ secrets.GITHUB_TOKEN }}
+            #       script: |
+            #           github.pulls.createReview({
+            #               owner: context.repo.owner,
+            #               repo: context.repo.repo,
+            #               pull_number: context.payload.issue.number,
+            #               event: 'APPROVE'
+            #           })
             - name: Add comment to PR
               uses: mshick/add-pr-comment@v2
               with:
