--- a/.github/workflows/pr-commands.yml
+++ b/.github/workflows/pr-commands.yml
@@ -18,6 +18,7 @@ jobs:
                 repository: ${{ github.repository }}
                 pull_number: ${{ github.event.issue.number }}
                 event: "APPROVE"
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             # - name: Approve PR
             #   uses: actions/github-script@v3
             #   with:
