--- a/.github/workflows/approve-to-int.yml
+++ b/.github/workflows/approve-to-int.yml
@@ -3,7 +3,11 @@ name: When approve merge to Integration
 on:
   pull_request_review:
     types: [submitted]
-  workflow_dispatch: 
+  workflow_dispatch:
+      inputs:
+          pull-request:
+              description: Pull Request Number
+              required: false
 
 concurrency: integration
 
@@ -19,8 +23,8 @@ jobs:
         run: echo "hola  ${{github.event.pull_request}}  ${{github.event.review.state}}" 
   merge:
     name: Merge into stage
-    runs-on: ubuntu-latest
     if: github.event.review.state == 'approved' && contains(github.event.pull_request.labels.*.name, 'QA' )
+    runs-on: ubuntu-latest
     steps:
       # Environment variables
       - name: Extract branch name
