✨PR6 tests auto merge in stage

--- a/.github/workflows/pr-approved.yml
+++ b/.github/workflows/pr-approved.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   notificar_aprobacion:
     name: Enviar Notificación de Aprobación
-    if: github.event.review.state == 'approved'
+    if: github.event.review.state == 'APPROVED'
     runs-on: ubuntu-latest
 
     steps:
