--- a/.github/workflows/approve-to-int.yml
+++ b/.github/workflows/approve-to-int.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo "hola  ${{github.event.pull_request}}  ${{github.event.review.state}}" 
   merge:
     name: Merge into stage
-    if: github.event.review.state == 'approved' && contains(github.event.pull_request.labels.*.name, 'QA' )
+    if: github.event.review.state == 'APPROVED' && contains(github.event.pull_request.labels.*.name, 'QA' )
     runs-on: ubuntu-latest
     steps:
       # Environment variables
