--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -8,7 +8,7 @@ on:
 
 
 concurrency:
-  group: auto-deploy-stage
+  group: audo-deploy-${{ github.ref }}
   cancel-in-progress: true
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
