✨PR15 tests auto merge in stage

--- a/.github/workflows/DEV-004 - deploy-gh-pages.yml
+++ b/.github/workflows/DEV-004 - deploy-gh-pages.yml
@@ -62,3 +62,10 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Add comment to PR
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+              ## PR has been deployed
+
+              - ✅ Your can review the changes on the [stage site](${{ steps.deployment.outputs.page_url }})
