--- a/.github/workflows/DEV-003-approve-to-int.yml
+++ b/.github/workflows/DEV-003-approve-to-int.yml
@@ -58,4 +58,15 @@ jobs:
     uses: ./.github/workflows/DEV-004 - deploy-gh-pages.yml
     needs: merge
     secrets: inherit
+
+  notification:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Add comment to PR
+      uses: mshick/add-pr-comment@v2
+      with:
+        message: |
+            ## PR has been deployed
+
+            - ✅ Your can review the changes on the [stage site](${{ needs.merge.outputs.url }})
           
