--- a/.github/workflows/DEV-003-approve-to-int.yml
+++ b/.github/workflows/DEV-003-approve-to-int.yml
@@ -62,11 +62,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-    - name: Add comment to PR
-      uses: mshick/add-pr-comment@v2
-      with:
-        message: |
-            ## PR has been deployed
+      - name: Debug
+        uses: raven-actions/debug@v1
+        with:
+          vars-context: ${{ toJson(vars) }}  # optional
+          secrets-context: ${{ toJson(secrets) }}  # optional
+          needs-context: ${{ toJson(needs) }}  # optional
+          inputs-context: ${{ toJson(inputs) }}  # optional
+      - name: Add comment to PR
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+              ## PR has been deployed
 
-            - ✅ Your can review the changes on the [stage site](${{ needs.merge.outputs.url }})
+              - ✅ Your can review the changes on the [stage site](${{ needs.merge.outputs.url }})
           
