--- a/.github/workflows/DEV-001-check-pr-has-QA-label.yml
+++ b/.github/workflows/DEV-001-check-pr-has-QA-label.yml
@@ -5,10 +5,20 @@ on:
     types: [opened, synchronize, reopened, labeled, unlabeled]
 
 jobs:
+  labels-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/github-script@v3
+        with:
+          script: |
+            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/scripts/check-labels.js`)
+            script({github, context})
+
   add-comment:
     if: contains(github.event.pull_request.labels.*.name, 'QA')
     runs-on: ubuntu-latest
-
+    needs: labels-check
     steps:
     - name: Add comment to PR
       uses: mshick/add-pr-comment@v2
