--- a/.github/workflows/DEV-001-check-pr-has-QA-label.yml
+++ b/.github/workflows/DEV-001-check-pr-has-QA-label.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/github-script@v3
         with:
           script: |
-            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/scripts/check-labels.js`)
+            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/scripts/check-labels.cjs`)
             script({github, context})
 
   add-comment:
